--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "db-vercel",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "start": "node api/index.js"
   },
