--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "db-vercel",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node index.js"
   },
   "author": "otechq",
   "license": "ISC",
